chore: tests refactoring
